# panelmark-tui

./: BORDER_FIX_TODO.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_TODO.md  ISSUES.md  KNOWN_LIMITATIONS.md  Makefile  README.md  RENDER_CONTRACT_TODO.md  RESPONSE.md  SUGGESTIONS.md  TODO.md  pyproject.toml
docs/: getting-started.md  interactions.md  renderer-implementation.md  testing.md  widgets.md
examples/: hello.py  task_manager.py
panelmark_tui/: __init__.py  context.py  events.py  executor.py  renderer.py  shell.py  style.py  testing.py
panelmark_tui/interactions/: __init__.py  checkbox.py  form.py  function.py  list_view.py  menu.py  nested_menu.py  radio_list.py  scrollable.py  status_message.py  table_view.py  textbox.py  tree_view.py
panelmark_tui/widgets/: __init__.py  _utils.py  alert.py  confirm.py  dataclass_form.py  date_picker.py  file_picker.py  input_prompt.py  list_select.py  progress.py  spinner.py  toast.py
tests/: conftest.py  test_examples.py  test_interactions.py  test_modal.py  test_nested_menu.py  test_radio_list.py  test_renderer.py  test_scrollable.py  test_table_view.py  test_termios_restore.py  test_tree_view.py  test_widget_dataclass_form.py  test_widget_date_picker.py  test_widget_file_picker.py  test_widget_progress.py  test_widget_toast_spinner.py  test_widgets.py
